[workspace]
resolver = "2"
members = ["probe-config", "firmware"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

# Firmware profiles: optimize for speed (the DAP hot path is CPU-bound between
# PIO FIFO operations), keep debug info for defmt/probe-rs.
[profile.release]
debug = 2
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev]
debug = 2
lto = "thin"
opt-level = 1
