[package]
name = "rustprobe-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Host CLI for configuring rustprobe multi-SWD-probe firmware over USB"

[[bin]]
name = "rustprobe"
path = "src/main.rs"

[dependencies]
probe-config = { path = "../probe-config" }
probe-config-toml = { path = "../probe-config-toml" }
nusb = "0.1"
futures-lite = "2"
clap = { version = "4", features = ["derive"] }
postcard = { version = "1", features = ["use-std"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
